--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /* shorthand - background
+               color > image > position > repeat > [size] > attachment */
+            
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main {
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus nobis asperiores similique libero molestias vel ullam. Fugiat repudiandae exercitationem eos. Inventore obcaecati minima aut corporis suscipit ipsa adipisci ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, ratione veniam vero dolorum debitis deserunt repellendus ad obcaecati in architecto nisi iure facilis dolorem, possimus est omnis repellat veritatis temporibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa rerum, totam mollitia velit quibusdam blanditiis nobis facilis, quidem tenetur quae laboriosam labore iste odit aut voluptate a quia numquam. Pariatur.</p>
     </main>
 </body>
 </html>
