--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -27,8 +28,18 @@
         }
 
         thead, tfoot {
-            background-color: gray;
+            background-color: #383838;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
+        tbody > tr:nth-child(even) {  /* ou (2n)   e (odd) ou (2n-1) */
+            background-color: lightgray;
         }
 
         td.num {
@@ -174,5 +185,12 @@
             </tr>
         </tbody>
      </table>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus ea odit neque corporis illo tenetur, quam, veniam perspiciatis ipsam vitae maiores. Aperiam vel temporibus esse beatae hic accusantium omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus molestiae, facilis laboriosam aliquid consequatur aperiam culpa perferendis id laborum explicabo eveniet animi provident sint beatae vel doloribus asperiores? Ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, totam ullam. Debitis quis ullam inventore! Quasi, nihil beatae. Alias qui eligendi possimus, sequi amet aspernatur ipsa quasi odio inventore doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, cumque libero repellat facere, totam reprehenderit iusto, laborum expedita neque enim excepturi ullam sint dolorum aliquam tempora earum magnam sed? Veritatis.</p>
 </body>
 </html>
