--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudo do iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender a programar.</p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe>  também é muito legal!</p>
+    <!-- Tamanhp padrão do iframe é de 300pxx150px -->
+    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500" scrolling="auto"><a href="www.cursoemvideo.com" target="_blank">Curso em Vídeo</a></iframe> para aprender a programar.</p>
+    <p>O site do Guanabara <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500" width="500">no <a href="https://gustavoguanabara.github.io" target="_blank">GitHub</a> </iframe>  também é bem legal!</p>
 </body>
 </html>
