--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <!-- Tamanhp padrão do iframe é de 300pxx150px -->
+    <!-- Tamanhp padrão do iframe é de 300x150 -->
     <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500" scrolling="auto"><a href="www.cursoemvideo.com" target="_blank">Curso em Vídeo</a></iframe> para aprender a programar.</p>
     <p>O site do Guanabara <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500" width="500">no <a href="https://gustavoguanabara.github.io" target="_blank">GitHub</a> </iframe>  também é bem legal!</p>
 </body>
