--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -14,13 +14,22 @@
             display: block;
             margin: auto;
         }
+
+        .erro {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: lightyellow;
+            color: blue;
+        }
     </style>
 </head>
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vitae placeat, atque dolorum optio maiores esse dolore aperiam aliquid inventore quos libero omnis facere voluptas minima assumenda. Maxime, error dicta. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quo doloribus similique eaque molestias possimus esse quidem maiores, placeat ea, iste fugiat, asperiores ratione reiciendis. Sint, commodi. Rerum, maxime veniam?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p class="erro">Infelizmente seu navegador não é compatível com isso</p>
+    </iframe>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita fuga, inventore voluptas qui veritatis nesciunt reiciendis molestias maxime, excepturi ullam ratione, pariatur labore quas sunt unde enim adipisci harum voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum minus aut vero fuga? Excepturi eaque, quis tenetur libero velit ea aut? Dignissimos labore, dolores laborum nulla illum autem neque illo.</p>
 </body>
 </html>
