--- a/exercicios/ex024/paginas-extras/pag001.html
+++ b/exercicios/ex024/paginas-extras/pag001.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Isso é um teste</h1>
+    <h1>Primeira pagina de exemplo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, incidunt reiciendis placeat, atque distinctio vero provident ipsam libero nemo repudiandae, voluptatem quas. Minus numquam sequi nemo perspiciatis, tempora alias similique?</p>
 </body>
 </html>
