atualização do exe024

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur recusandae aperiam doloremque tempore deserunt? Doloribus sunt excepturi, soluta ut natus alias, voluptates, odio magnam consequuntur optio corrupti. Minima, eius inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex dolorem ipsam possimus harum, libero voluptates quisquam repellat numquam nulla sapiente illo sed odio hic. Nulla ullam odit animi esse excepturi?</p>
 
-    <iframe name="frame" src="">
+    <iframe name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur recusandae aperiam doloremque tempore deserunt? Doloribus sunt excepturi, soluta ut natus alias, voluptates, odio magnam consequuntur optio corrupti. Minima, eius inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex dolorem ipsam possimus harum, libero voluptates quisquam repellat numquam nulla sapiente illo sed odio hic. Nulla ullam odit animi esse excepturi?</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
