--- a/exercicios/Modulo-05/ex028/desafio/index.html
+++ b/exercicios/Modulo-05/ex028/desafio/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Desafio Grid Layout</title>
+    <title>Desafio 1 - Grid Layout</title>
 </head>
 <body>
     <div class="container">
-        <header class="topo">topo</header>
-        <nav class="menu">menu</nav>
-        <main class="principal">principal</main>
-        <aside class="secundario">secundario</aside>
-        <footer class="rodape">rodape</footer>
+        <header class="caixa" id="topo">Topo</header>
+        <nav class="caixa" id="menu">Menu</nav>
+        <main class="caixa" id="principal">Principal</main>
+        <aside class="caixa" id="secundario">Secundario</aside>
+        <footer class="caixa" id="rodape">Rodapé</footer>
     </div>
 </body>
 </html>
